rnsc/test_data/integration/error/parser/outside_class_directive/before_class_dir/dot_code.rns
.code
.class public HelloWorld
.super java/lang/Object
